--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 WDI_CSV
 WB_countries_Admin0_10m
+life_over_time.gif
+gdp_over_time.gif
+gdp_over_time.gif
+gdp_over_time.gif
+gdp_over_time.gif
+.RData
+.RData
+.RData
